@@ -1,0 +1,26 @@
+AT_SETUP([escaped selectors])
+MTN_SETUP
+
+ADD_FILE(testfile, [blah blah
+])
+COMMIT(test/branch)
+REV1=`BASE_REVISION`
+
+SET_FILE(testfile, [stuff stuff
+])
+COMMIT(test/branch)
+REV2=`BASE_REVISION`
+
+SET_FILE(testfile, [chew chew
+])
+COMMIT(other/branch)
+REV3=`BASE_REVISION`
+
+CHECK_SAME_CANONICALISED_STDOUT((echo $REV1 && echo $REV2) | sort, MTN automate select b:test\\/branch)
+CHECK_SAME_CANONICALISED_STDOUT(echo $REV3, MTN automate select b:other\\/branch)
+CHECK_SAME_CANONICALISED_STDOUT(echo $REV3, MTN automate select b:)
+CHECK_SAME_CANONICALISED_STDOUT(echo $REV2, MTN automate select h:test\\/branch)
+CHECK_SAME_CANONICALISED_STDOUT(echo $REV3, MTN automate select h:other\\/branch)
+CHECK_SAME_CANONICALISED_STDOUT(echo $REV3, MTN automate select h:)
+
+AT_CLEANUP
