@@ -883,3 +883,4 @@ m4_include(tests/t_ls_epochs.at)
 m4_include(tests/t_hook_helpers.at)
 m4_include(tests/t_no_log_password.at)
 m4_include(tests/t_quiet.at)
+m4_include(tests/t_escaped_selectors.at)
